--- a/index.html
+++ b/index.html
@@ -1,45 +1,62 @@
 <!DOCTYPE html>
-<html>  
-  <head>
-  	<meta charset="utf-8" name="viewport" content="width=device-width, user-sclable=no, minimum-scale=1.0, maximum-scale=1.0">
-    <script src="https://aframe.io/releases/0.9.2/aframe.min.js"></script> 
-    <script src="https://jeromeetienne.github.io/AR.js/aframe/build/aframe-ar.js"></script>
-    <script src="dist/aframe-gif-shader.js"></script>
+<html>
 
-    <style>
-    	audio{
-    		position: absolute;
-    		left: 10%;
-    		z-index: 1;
-    	}
-    </style>
-  </head>   
+<head>
+  <meta charset="utf-8" name="viewport"
+    content="width=device-width, user-sclable=no, minimum-scale=1.0, maximum-scale=1.0">
+  <script src="https://aframe.io/releases/0.9.2/aframe.min.js"></script>
+  <script src="https://jeromeetienne.github.io/AR.js/aframe/build/aframe-ar.js"></script>
+  <script src="dist/aframe-gif-shader.js"></script>
 
-  <body>
-  	<audio autoplay controls loop>
-  		<source src="ChristmasVillage.mp3">
-  	</audio>
-    <a-scene embedded arjs>
-      <a-assets>
-        <img id="transpImageFondo" src="Fondo.png">
-        <img id="transpImageCapa1" src="Capa1.png">
-        <img id="transpImageCapa2" src="Capa2.gif">
-        <img id="transpImageCapa3" src="Capa3.png">
-        <img id="transpImageCapa4" src="Capa4.gif">
-        <img id="transpImageCapa5" src="Capa5.png">
-        <img id="transpImageCapa6" src="Capa6.gif">
-      </a-assets>
+  <link rel="stylesheet" href="css/style.css">
+</head>
 
-      <a-image width="1" height="1" src="#transpImageFondo" position='0 0 0' rotation="-90 0 0" scale="2 2" ></a-image>
-      <a-image width="1" height="1" src="#transpImageCapa1" position='0 0.15 0' rotation="-90 0 0" scale="2 2" ></a-image>
-      <a-entity geometry="primitive:plane;width:2;height:2;" position="0 0.3 0" rotation="-90 0 0" material="shader:gif;src:#transpImageCapa2;alphaTest:0.5;">></a-entity>
-      <a-image width="1" height="1" src="#transpImageCapa3" position='0 0.45 0' rotation="-90 0 0" scale="2 2 0" ></a-image>
-      <a-entity geometry="primitive:plane;width:2;height:2;" position="0 0.6 0" rotation="-90 0 0" material="shader:gif;src:#transpImageCapa4;alphaTest:0.5;">></a-entity>
-      <a-image width="1" height="1" src="#transpImageCapa5" position='0 0.75 0' rotation="-90 0 0" scale="2 2 0" ></a-image>
-      <a-entity geometry="primitive:plane;width:2;height:2;" position="0 0.8 0" rotation="-90 0 0" material="shader:gif;src:#transpImageCapa6;alphaTest:0.5;">></a-entity>
+<body>
 
-      <a-marker-camera preset='custom' type='pattern' url='pattern_Card.patt'></a-marker-camera>
-      
-    </a-scene>
-  </body>
+    <div class="sound" id="display">
+        <button class="button" onclick="playAudio()" type="button">
+          <img src="Indicador de Volúmen.png" alt="play">
+        </button>
+        <audio id="play" loop>
+          <source src="ChristmasVillage.mp3" type="audio/mp3">
+        </audio>
+    </div>
+
+  <a-scene embedded arjs>
+
+    <a-assets>
+      <img id="transpImageFondo" src="Fondo.png">
+      <img id="transpImageCapa1" src="Capa1.png">
+      <img id="transpImageCapa2" src="Capa2.gif">
+      <img id="transpImageCapa3" src="Capa3.png">
+      <img id="transpImageCapa4" src="Capa4.gif">
+      <img id="transpImageCapa5" src="Capa5.png">
+      <img id="transpImageCapa6" src="Capa6.gif">
+    </a-assets>
+
+    <a-image width="1" height="1" src="#transpImageFondo" position='0 0 0' rotation="-90 0 0" scale="2 2"></a-image>
+    <a-image width="1" height="1" src="#transpImageCapa1" position='0 0.15 0' rotation="-90 0 0" scale="2 2"></a-image>
+    <a-entity geometry="primitive:plane;width:2;height:2;" position="0 0.3 0" rotation="-90 0 0"
+      material="shader:gif;src:#transpImageCapa2;alphaTest:0.5;">></a-entity>
+    <a-image width="1" height="1" src="#transpImageCapa3" position='0 0.45 0' rotation="-90 0 0" scale="2 2 0">
+    </a-image>
+    <a-entity geometry="primitive:plane;width:2;height:2;" position="0 0.6 0" rotation="-90 0 0"
+      material="shader:gif;src:#transpImageCapa4;alphaTest:0.5;">></a-entity>
+    <a-image width="1" height="1" src="#transpImageCapa5" position='0 0.75 0' rotation="-90 0 0" scale="2 2 0">
+    </a-image>
+    <a-entity geometry="primitive:plane;width:2;height:2;" position="0 0.8 0" rotation="-90 0 0"
+      material="shader:gif;src:#transpImageCapa6;alphaTest:0.5;">></a-entity>
+
+    <a-marker-camera preset='custom' type='pattern' url='pattern_Card.patt'></a-marker-camera>
+
+    
+
+  </a-scene>
+
+  <script src="js/main.js"></script>
+
+  
+ 
+</body>
+
 </html>
