--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <div class="sound" id="display">
         <button class="button" onclick="playAudio()" type="button">
-          <img src="Indicador de Volúmen.png" alt="play">
+          <img src="Boton Sonido Ingles.png" alt="play">
         </button>
         <audio id="play" loop>
           <source src="ChristmasVillage.mp3" type="audio/mp3">
