--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html>
 
 <head>
-  <meta charset="utf-8" name="viewport"
-    content="width=device-width, user-sclable=no, minimum-scale=1.0, maximum-scale=1.0">
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE-edge">
+  <meta name="viewport" content="width=device-width, user-sclable=no, minimum-scale=1.0, maximum-scale=1.0">
+
   <script src="https://aframe.io/releases/0.9.2/aframe.min.js"></script>
   <script src="https://jeromeetienne.github.io/AR.js/aframe/build/aframe-ar.js"></script>
   <script src="dist/aframe-gif-shader.js"></script>
@@ -15,7 +17,7 @@
 
     <div class="sound" id="display">
         <button class="button" onclick="playAudio()" type="button">
-          <img src="Boton Sonido Inglés.png" alt="play">
+          <img src="Boton Sonido Español.png" alt="play">
         </button>
         <audio id="play" loop>
           <source src="ChristmasVillage.mp3" type="audio/mp3">
